Lab GPU: 2a parte corregido

--- a/reduc-operation-array_gpu-alumno13.ipynb
+++ b/reduc-operation-array_gpu-alumno13.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "496946fa-2a28-4c1d-8a6a-2ee0b8fd8ced",
    "metadata": {},
    "outputs": [
@@ -18,14 +18,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time taken by reduction operation using a function: 5.14 ms ± 171 µs per loop (mean ± std. dev. of 2 runs, 100 loops each)\n",
-      "And the result of the sum of numbers in the range [0, value) is: 24944.383968771068\n",
+      "Time taken by reduction operation using a function: 4.81 ms ± 26.2 µs per loop (mean ± std. dev. of 2 runs, 100 loops each)\n",
+      "And the result of the sum of numbers in the range [0, value) is: 25007.37808310279\n",
       "\n",
-      "Time taken by reduction operation using numpy.sum(): 14 µs ± 17.6 ns per loop (mean ± std. dev. of 2 runs, 100,000 loops each)\n",
-      "Now, the result using numpy.sum(): 24944.383968770973 \n",
+      "Time taken by reduction operation using numpy.sum(): 13.9 µs ± 2.05 ns per loop (mean ± std. dev. of 2 runs, 100,000 loops each)\n",
+      "Now, the result using numpy.sum(): 25007.378083102678 \n",
       " \n",
-      "Time taken by reduction operation using numpy.ndarray.sum(): 11.9 µs ± 4.51 ns per loop (mean ± std. dev. of 2 runs, 100,000 loops each)\n",
-      "Now, the result using numpy.ndarray.sum(): 24944.383968770973\n"
+      "Time taken by reduction operation using numpy.ndarray.sum(): 11.8 µs ± 26.2 ns per loop (mean ± std. dev. of 2 runs, 100,000 loops each)\n",
+      "Now, the result using numpy.ndarray.sum(): 25007.378083102678\n"
      ]
     }
    ],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 39,
    "id": "0d43ed91-ac2c-4784-8484-519a30c2abbb",
    "metadata": {},
    "outputs": [
@@ -99,19 +99,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El tiempo empleado en la suma con cupy es: 17.9 µs ± 12.6 ns per loop (mean ± std. dev. of 2 runs, 100,000 loops each)\n"
+      "El tiempo empleado en la suma con cupy es 0.045 milisegundos.\n",
+      "El resultado de la suma es 25046.111916890317\n"
      ]
     }
    ],
    "source": [
-    "import cupy as cp # Importamos el paquete\n",
+    "import numpy as np\n",
+    "import cupy as cp \n",
+    "from cupyx.profiler import benchmark\n",
+    "import sys # Importamos los paquetes\n",
     "\n",
+    "value = int(sys.argv[1])\n",
     "Y = cp.random.rand(value) # Creamos el array en la GPU\n",
     "\n",
     "# Ahora medimos el tiempo de la suma con cp\n",
-    "tiempo = %timeit -r 2 -o -q cp.sum(Y)\n",
+    "tiempos_gpu = benchmark(cp.sum, (Y,), n_repeat=10, n_warmup=2)\n",
     "\n",
-    "print(\"El tiempo empleado en la suma con cupy es:\", tiempo)"
+    "# Calculamos la media de los tiempos y lo convertimos a ms\n",
+    "tiempo_medio = np.average(tiempos_gpu.gpu_times) * 1e3\n",
+    "\n",
+    "print(f\"El tiempo empleado en la suma con cupy es {tiempo_medio:.3f} milisegundos.\")\n",
+    "print(\"El resultado de la suma es\", cp.sum(Y))"
    ]
   },
   {
@@ -123,47 +132,48 @@
     "\n",
     "Ejecutando el script con el valor de 5000000 elementos\n",
     "\n",
-    "Time taken by reduction operation using a function: 260 ms ± 353 µs per loop (mean ± std. dev. of 2 runs, 1 loop each)\n",
-    "And the result of the sum of numbers in the range [0, value) is: 2499720.0682061655\n",
+    "Time taken by reduction operation using a function: 536 ms ± 171 µs per loop (mean ± std. dev. of 2 runs, 1 loop each)\n",
+    "And the result of the sum of numbers in the range [0, value) is: 2499339.765069698\n",
     "\n",
-    "Time taken by reduction operation using numpy.sum(): 1.39 ms ± 1.6 µs per loop (mean ± std. dev. of 2 runs, 1,000 loops each)\n",
-    "Now, the result using numpy.sum(): 2499720.0682063703\n",
+    "Time taken by reduction operation using numpy.sum(): 2.05 ms ± 636 ns per loop (mean ± std. dev. of 2 runs, 100 loops each)\n",
+    "Now, the result using numpy.sum(): 2499339.765069741\n",
     "\n",
-    "Time taken by reduction operation using numpy.ndarray.sum(): 1.39 ms ± 1.43 µs per loop (mean ± std. dev. of 2 runs, 1,000 loops each)\n",
-    "Now, the result using numpy.ndarray.sum(): 2499720.0682063703\n",
+    "Time taken by reduction operation using numpy.ndarray.sum(): 2.04 ms ± 932 ns per loop (mean ± std. dev. of 2 runs, 100 loops each)\n",
+    "Now, the result using numpy.ndarray.sum(): 2499339.765069741\n",
     "\n",
-    "El tiempo empleado en la suma con cupy es: 25.7 µs ± 15.8 µs per loop (mean ± std. dev. of 2 runs, 1 loop each)\n",
-    "\n",
+    "El tiempo empleado en la suma con cupy es 0.086 milisegundos.\n",
+    "El resultado de la suma es 2500216.390959031\n",
     "\n",
     "Ejecutando el script con el valor de 50000000 elementos\n",
     "\n",
-    "Time taken by reduction operation using a function: 2.56 s ± 1.81 ms per loop (mean ± std. dev. of 2 runs, 1 loop each)\n",
-    "And the result of the sum of numbers in the range [0, value) is: 25001708.101016495\n",
+    "Time taken by reduction operation using a function: 2.7 s ± 651 µs per loop (mean ± std. dev. of 2 runs, 1 loop each)\n",
+    "And the result of the sum of numbers in the range [0, value) is: 25001907.312928956\n",
     "\n",
-    "Time taken by reduction operation using numpy.sum(): 17.7 ms ± 4.35 µs per loop (mean ± std. dev. of 2 runs, 100 loops each)\n",
-    "Now, the result using numpy.sum(): 25001708.101022553\n",
+    "Time taken by reduction operation using numpy.sum(): 17.8 ms ± 921 ns per loop (mean ± std. dev. of 2 runs, 100 loops each)\n",
+    "Now, the result using numpy.sum(): 25001907.312925413\n",
     "\n",
-    "Time taken by reduction operation using numpy.ndarray.sum(): 17.7 ms ± 9.38 µs per loop (mean ± std. dev. of 2 runs, 100 loops each)\n",
-    "Now, the result using numpy.ndarray.sum(): 25001708.101022553\n",
+    "Time taken by reduction operation using numpy.ndarray.sum(): 17.8 ms ± 5.57 µs per loop (mean ± std. dev. of 2 runs, 100 loops each)\n",
+    "Now, the result using numpy.ndarray.sum(): 25001907.312925413\n",
     "\n",
-    "El tiempo empleado en la suma con cupy es: 691 µs ± 54 ns per loop (mean ± std. dev. of 2 runs, 1,000 loops each)\n",
-    "\n",
+    "El tiempo empleado en la suma con cupy es 0.716 milisegundos.\n",
+    "El resultado de la suma es 24998738.856534127\n",
     "\n",
     "Ejecutando el script con el valor de 500000000 elementos\n",
     "\n",
-    "Time taken by reduction operation using a function: 54.4 s ± 19.7 ms per loop (mean ± std. dev. of 2 runs, 1 loop each)\n",
-    "And the result of the sum of numbers in the range [0, value) is: 249990389.5794505\n",
+    "Time taken by reduction operation using a function: 25.7 s ± 24.6 ms per loop (mean ± std. dev. of 2 runs, 1 loop each)\n",
+    "And the result of the sum of numbers in the range [0, value) is: 249991982.529075\n",
     "\n",
-    "Time taken by reduction operation using numpy.sum(): 215 ms ± 8.31 µs per loop (mean ± std. dev. of 2 runs, 1 loop each)\n",
-    "Now, the result using numpy.sum(): 249990389.57945037\n",
+    "Time taken by reduction operation using numpy.sum(): 179 ms ± 8.9 µs per loop (mean ± std. dev. of 2 runs, 10 loops each)\n",
+    "Now, the result using numpy.sum(): 249991982.52918264\n",
     "\n",
-    "Time taken by reduction operation using numpy.ndarray.sum(): 215 ms ± 20.1 µs per loop (mean ± std. dev. of 2 runs, 1 loop each)\n",
-    "Now, the result using numpy.ndarray.sum(): 249990389.57945037\n",
+    "Time taken by reduction operation using numpy.ndarray.sum(): 180 ms ± 50.6 µs per loop (mean ± std. dev. of 2 runs, 10 loops each)\n",
+    "Now, the result using numpy.ndarray.sum(): 249991982.52918264\n",
     "\n",
-    "El tiempo empleado en la suma con cupy es: 6.82 ms ± 35.1 ns per loop (mean ± std. dev. of 2 runs, 1,000 loops each)\n",
+    "El tiempo empleado en la suma con cupy es 6.839 milisegundos.\n",
+    "El resultado de la suma es 249992925.22264686\n",
     "\n",
     "#### Conclusiones:\n",
-    "La utilización del paquete *cupy* y la ejecución en una cola con GPU disminuyen considerablemente el tiempo, llegando al orden de µs con los dos primeros valores, y pasando a solo unos 7 ms cuando el valor es 5*10^8."
+    "Podemos observar que el utilización del paquete CuPy y la ejecución en una cola con GPU disminuyen considerablemente el tiempo de la suma. La reducción de tiempo con respecto al resto de funciones aumenta conforme incrementamos el número de elementos a sumar."
    ]
   }
  ],
